# fermentdial

./: .gitignore  AGENTS.md  LICENSE  README.md  platformio.ini  pyproject.toml
.github/workflows/: build.yml  pages.yml  release.yml
data/fonts/: dejavu_sans_bold_44.vlw
docs/: test-coverage-plan.md
include/: config.h  network_detail.h  policy.h  programs.h  secrets.example.h  status_hint.h
include/fonts/: dejavu_sans_bold_44_vlw.h  help_glyph.h
site-src/: index.html
src/: control.cpp  control.h  events.cpp  events.h  history.cpp  history.h  hydrometer.cpp  hydrometer.h  improv_serial.cpp  improv_serial.h  main.cpp  network.cpp  network.h  network_core.cpp  network_detail.cpp  network_export.cpp  network_handlers.cpp  network_html.cpp  network_integrations.cpp  policy.cpp  storage.cpp  storage.h  time_sync.cpp  time_sync.h  ui.cpp  ui.h  ui_draw.cpp  ui_input.cpp  ui_internal.h  web_assets.h
test/golden/: capture.sh
test/golden/after/: api_events.txt  api_history.txt  api_selfcheck.txt  api_settings.txt  api_status.txt  firmware.txt  (+3 more)
test/mocks/: Arduino.h  DallasTemperature.h  OneWire.h
test/smoke/: .gitignore  README.md  decode_screen.py  drive.sh
test/test_control/: test_control.cpp
test/test_settings/: test_settings.cpp
tools/: gen_site_manifests.py  git_sha.py  make_vlw_font.py  ota_upload.py  ota_upload_target.py
webui/: .env.example  index.html  package-lock.json  package.json  vite.config.js
webui/public/: manifest.webmanifest
webui/src/: api.js  main.js  validation.js
webui/tools/: build-header.mjs  generate-pwa-assets.mjs
(+22 files in other folders)
